# habi_backend_technical_test

./: .env.example  .gitignore  Dockerfile  pyproject.toml  readme.md
apps/likes_api/: main.py  module.py  routes.py  service.py
apps/property_api/: module.py  routes.py  service.py  test_property_service.py
lib/constants/: properties_read.py
lib/database/: my_sql.py  sql_db.py  sqlite.py
lib/dtos/: like_dto.py  property_dto.py
lib/enums/: database.py
lib/interface/: database.py  pagination.py
lib/models/: like_model.py  property_model.py
lib/repository/: like_repository.py  property_repository.py
lib/secrets/: dot_secret_manager.py  env_secret_manager.py
lib/tests/: test_dot_env_sm.py  test_my_sql.py
lib/utils/: singleton.py
sql/: create_like_table.sql
